--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
-    "fastestsmallesttextencoderdecoder": "^1.0.8"
+    "text-encoder": "0.0.4"
   }
 }
