--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shamir-secret-splitter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AsaAyers.github.io/shamir-secret-splitter",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -18,6 +20,8 @@
     "typescript": "^3.7.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
