--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://AsaAyers.github.io/shamir-secret-splitter",
+  "repository": "https://github.com/AsaAyers/shamir-secret-splitter",
   "dependencies": {
     "@material-ui/core": "^4.8.2",
     "@testing-library/jest-dom": "^4.2.4",
