--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "classnames": "^2.2.6",
     "gh-pages": "^2.1.1",
     "pgp-word-list": "0.0.1",
     "qrcode.react": "^1.0.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/qrcode.react": "^1.0.0",
     "@types/react-qr-reader": "^2.1.2",
     "@types/react-router-dom": "^5.1.3",
